# cryoet-ai

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile.api  Dockerfile.scanner  README.md  docker-compose.yml  nginx.conf  pixi.toml  pyproject.toml
.claude/plans/: 2026-05-01-cryoet-catalog-scanner.md  2026-05-08-dashboard-mvp.md  2026-06-05-tomogram-thumbnail-cache.md  2026-06-05-total-data-size-on-disk.md  2026-06-08-neuroglancer-launch-wiring.md
.devcontainer/: Dockerfile  init-firewall.sh
.github/workflows/: build-images.yml
cryoet_catalog/: __init__.py  __main__.py  assembler.py  cli.py  db.py  discovery.py  orm.py  persistence.py  scanner.py  state.py  thumbnails.py
cryoet_catalog/api/: __init__.py  deps.py  main.py  schemas.py
cryoet_catalog/api/routes/: extras.py  filters.py  samples.py  scans.py  stats.py  thumbnails.py  tomograms.py  warnings.py
cryoet_catalog/imaging/: _neuroglancer.py  _polar.py  _tilt_image.py
cryoet_catalog/migrations/: README.md
cryoet_catalog/parsers/: __init__.py  frame_ext.py  mdoc.py  mrc_header.py  ome_zarr.py  tilt_series.py  toml_files.py
cryoet_schema/: __init__.py  acquisition.schema.json  loader.py  schema.json  schema.py  schema_info.md  sync_templates.py
deploy/: DEPLOYMENT.md  Dockerfile.api  Dockerfile.scanner
deploy/k8s/base/: api.yaml  storage.yaml
deploy/k8s/overlays/production/: config.env.example  kustomization.yaml  namespace.yaml
docs/: architecture.md  data_organization.md  schema.md
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/: client.tsx  package-lock.json  routeTree.gen.ts  router.tsx  ssr.tsx  types.ts
frontend/src/components/: Footer.tsx  Header.tsx
frontend/src/components/acquisitions/: TomogramsAnnotationsTable.tsx
frontend/src/components/common/: CopyIconButton.tsx  NeuroglancerButton.tsx  Thumbnail.tsx
frontend/src/components/filters/: ChipSelect.tsx  FilterClearButton.tsx  FilterDrawer.tsx  RangeSlider.tsx
frontend/src/components/landing/: AcquisitionsSubTable.tsx  SamplesPortalTable.tsx
frontend/src/components/manage/: AllScansTable.tsx  ScanRunWarningsTable.tsx
frontend/src/components/samples/: AcquisitionCard.tsx  AnnotationList.tsx  SampleAcquisitionsTable.tsx  SampleDetailPanel.tsx  SampleHeader.tsx  SamplesTable.tsx  SubEntityBlock.tsx  TiltSeriesCard.tsx  TomogramCard.tsx  WarningList.tsx
frontend/src/hooks/: useDebounce.ts  useSamples.ts
frontend/src/routes/: __root.tsx  acquisitions.$acquisitionId.tsx  index.tsx  manage.$scanId.tsx  manage.all-scans.tsx  manage.index.tsx  samples.$sampleId.tsx  samples.tsx
frontend/src/routes/samples/: $sampleId.tsx  index.tsx
frontend/src/utils/: queryOptions.ts  samplesSearch.ts
k8s/base/: api.yaml  frontend.yaml  kustomization.yaml  nginx.yaml  routes.yaml  scanner.yaml  storage.yaml
k8s/overlays/production/: config.env.example  kustomization.yaml  namespace.yaml
src/catalog/: __main__.py  assembler.py  cli.py  db.py  discovery.py  orm.py  persistence.py  scanner.py  state.py  thumbnails.py
src/catalog/api/: main.py  path_validation.py  schemas.py
src/catalog/api/routes/: extras.py  filters.py  samples.py  scans.py  stats.py  thumbnails.py  tilt_series.py  tomograms.py  warnings.py
src/catalog/imaging/: __init__.py  _mrc.py  _neuroglancer.py
src/catalog/migrations/: README.md  alembic.ini  env.py
src/catalog/parsers/: frame_ext.py  mdoc.py  mrc_header.py  ome_zarr.py  tilt_series.py  toml_files.py
src/schema/: __init__.py  acquisition.schema.json  generate_json_schema.py  layout.py  loader.py  md_run.schema.json  schema.json  schema.py  schema_info.md  sync_templates.py  validate.py
templates/: acquisition.toml  sample.toml
templates/sample_id_experimental/: sample.toml
templates/sample_id_simulation/MdRuns/md_run_id/: md_run.toml
templates/sample_id_simulation/SyntheticCryoET/acquisition_id/: acquisition.toml
templates/sample_name/: sample.toml
templates/sample_name/acquisition_name/: acquisition.toml
templates/sample_name_experimental/acquisition_name/: acquisition.toml
templates/sample_name_simulation/: sample.toml
templates/sample_name_simulation/acquisition_name/: acquisition.toml
tests/: test_deps_in_sync.py  test_generate_json_schema.py  test_id_validation.py  test_repo_consistency.py  test_validate_sample.py
tests/catalog/: test_api.py  test_api_filters.py  test_api_filters_options.py  test_api_neuroglancer.py  test_api_path_validation.py  test_api_scans.py  test_api_stats.py  test_api_thumbnails.py  test_api_tilt_series.py  test_api_tomograms_preview.py  test_assembler.py  test_assembler_tilt_series.py  test_discovery.py  test_extras_tilt_series.py  test_init_schema.py  test_orm_drift.py  test_parser_tilt_series.py  test_parsers.py  test_persistence.py  test_persistence_tilt_series_soft_delete.py  test_prune.py  test_scanner.py  test_state.py  test_thumbnails.py
tests/catalog/fixtures/: README.md
tests/catalog/fixtures/Experimental/sample_chromatin/: sample.toml
tests/catalog/fixtures/MdSimulation/SingleMolecule/sample_simulation/: sample.toml
tests/catalog/fixtures/sample_chromatin/Position_86/: acquisition.toml
tests/catalog/fixtures/sample_simulation/: sample.toml
tests/cryoet_catalog/: test_api.py  test_api_filters.py  test_api_filters_options.py  test_api_neuroglancer.py  test_api_path_validation.py  test_api_scans.py  test_api_stats.py  test_api_tilt_series.py  test_api_tomograms_preview.py  test_assembler.py  test_assembler_tilt_series.py  test_discovery.py  test_extras_tilt_series.py  test_init_schema.py  test_orm_drift.py  test_parser_tilt_series.py  test_parsers.py  test_persistence.py  test_persistence_tilt_series_soft_delete.py  test_prune.py  test_scanner.py  test_state.py
tests/cryoet_catalog/fixtures/sample_chromatin/: sample.toml
tests/cryoet_catalog/fixtures/sample_chromatin/Position_86/: acquisition.toml
tests/cryoet_schema/: test_loader_isolation.py  test_walker.py
tests/schema/: test_loader_isolation.py  test_walker.py
utils/: relion_to_portal.py
(+8 files in other folders)
