[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "catalog-schema"
version = "0.1.0"
description = "Pydantic schema, validator CLI, and catalog scanner for CryoET + AI sample metadata."
requires-python = ">=3.11"
authors = [{ name = "allison-truhlar", email = "truhlara@janelia.hhmi.org" }]
dependencies = [
    "pydantic>=2.6",
    "rapidfuzz>=3.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.scripts]
validate = "schema.validate:main"
json-schema = "schema.generate_json_schema:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["schema*", "catalog*"]

[tool.pytest.ini_options]
# Folded in from the former pytest.ini. `pythonpath = src` puts the src-layout
# packages on sys.path so tests import them without an editable install.
pythonpath = ["src"]
testpaths = ["tests"]

# ---------------------------------------------------------------------------
# Pixi configuration. Runtime deps for the schema/validator are duplicated
# from [project] so pixi can resolve them from conda-forge.
# tests/test_deps_in_sync.py enforces alignment for the schema + test deps;
# the catalog/api features are pixi-only because researchers don't need them.
# ---------------------------------------------------------------------------

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.activation.env]
CATALOG_DATA_ROOT = "${CATALOG_DATA_ROOT}"
# src layout: put src/ on the import path for every pixi task (`python -m ...`,
# uvicorn, the scan task). Relative to the task cwd (repo root locally, /app in
# the containers).
PYTHONPATH = "src"

[tool.pixi.dependencies]
python = ">=3.11"
pydantic = ">=2.6"
rapidfuzz = ">=3.0"

[tool.pixi.tasks]
validate = "python -m schema.validate"
json-schema = "python -m schema.generate_json_schema"
sync-templates = "python -m schema.sync_templates"
# Regenerate every artifact derived from schema.py + the canonical templates.
sync = { depends-on = ["json-schema", "sync-templates"] }
scan = { cmd = "python -m catalog scan", default-environment = "catalog" }

[tool.pixi.feature.test.dependencies]
pytest = ">=7.0"

[tool.pixi.feature.test.tasks]
test = "pytest"

[tool.pixi.feature.catalog.dependencies]
sqlalchemy = ">=2.0"
mrcfile = ">=1.5"
alembic = ">=1.13"
numpy = ">=1.26"
matplotlib-base = ">=3.8"

[tool.pixi.feature.catalog.tasks]
migrate = "alembic -c src/catalog/migrations/alembic.ini upgrade head"
migrate-revision = "alembic -c src/catalog/migrations/alembic.ini revision --autogenerate -m"

[tool.pixi.feature.api.dependencies]
fastapi = ">=0.110"
uvicorn = "*"
loguru = ">=0.7"
numpy = ">=1.26"
matplotlib-base = ">=3.8"
pillow = ">=10"
neuroglancer = ">=2.40"
zarr = ">=2.16"
tifffile = ">=2024.1"

[tool.pixi.feature.api.pypi-dependencies]
eerfile = "*"

[tool.pixi.feature.api.tasks]
api = "uvicorn catalog.api.main:app --port 8000"
frontend = { cmd = "npm run dev", cwd = "frontend", depends-on = [
    "frontend-install",
] }
frontend-install = { cmd = "npm install", cwd = "frontend", inputs = [
    "frontend/package.json",
    "frontend/package-lock.json",
], outputs = [
    "frontend/node_modules/.package-lock.json",
] }

[tool.pixi.environments]
default = { solve-group = "default" }
test = { features = ["test"], solve-group = "default" }
catalog = { features = ["catalog", "test"], solve-group = "default" }
api = { features = ["catalog", "api", "test"], solve-group = "default" }
